--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -28,7 +28,7 @@ nav ul {
   display: flex;
   height: 100%;
   align-items: center;
-  gap: clamp(0.65rem, -2.089rem + 5.699vw, 4.75rem);
+  gap: clamp(1rem, -1.2rem + 5.699vw, 4.75rem);
   margin-right: auto;
   margin-left: clamp(2.5rem, 1.498rem + 2.085vw, 4rem);
 }
@@ -104,6 +104,32 @@ header > a:nth-of-type(2) {
   display: flex;
   align-items: center;
   line-height: clamp(1.875rem, 1.29rem + 1.216vw, 2.1rem);
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out
+}
+
+header > a:nth-of-type(2):hover {
+  transform: scale(1.05);
+}
+
+header > a:nth-of-type(2):after {
+  background: #fff;
+  content: "";
+  height: 40px;
+  left: -75px;
+  opacity: .6;
+  position: absolute;
+  top: -10px;
+  transform: rotate(40deg);
+  transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+  width: 30px;
+  z-index: 2;
+}
+
+header > a:nth-of-type(2):hover:after {
+  left: 120%;
+  transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 header > a:nth-of-type(3), header button {
@@ -111,6 +137,11 @@ header > a:nth-of-type(3), header button {
   height: 2.5rem;
   margin: auto 0;
   cursor: pointer;
+  transition: all 0.3s ease-in-out
+}
+
+header > a:nth-of-type(3):hover, header button:nth-of-type(1):hover {
+  transform: scale(1.1);
 }
 
 header button:nth-of-type(1) {
