main page below fold

--- a/src/app/below-fold/below-fold.component.html
+++ b/src/app/below-fold/below-fold.component.html
@@ -1,14 +1,14 @@
-<div class="wave"></div>
+<img src="../../assets/wave.svg" class="wave">
 <section class="products-section">
   <h2>Népszerű Termékek</h2>
   <ul>
     <li>
       <div class="image-container">
-        <img src="" alt="">
+        <img src="../../assets/sauce.png" alt="">
         <ul>
           <li><img src="../assets/fire-colored.svg" alt=""></li>
-          <li><img src="../assets/fire-outlined.svg" alt=""></li>
-          <li><img src="../assets/fire-outlined.svg" alt=""></li>
+          <li><img src="../assets/fire-monotone.svg" alt=""></li>
+          <li><img src="../assets/fire-monotone.svg" alt=""></li>
         </ul>
       </div>
       <h3>Reaper Szósz</h3>
@@ -16,22 +16,47 @@
       <span><b>2200</b> Ft</span>
       <button>Kosárba</button>
     </li>
-    <li></li>
-    <li></li>
+    <li>
+      <div class="image-container">
+        <img src="../../assets/sauce.png" alt="">
+        <ul>
+          <li><img src="../assets/fire-colored.svg" alt=""></li>
+          <li><img src="../assets/fire-monotone.svg" alt=""></li>
+          <li><img src="../assets/fire-monotone.svg" alt=""></li>
+        </ul>
+      </div>
+      <h3>Reaper Szósz</h3>
+      <p>Amely alma, szilva, hidrogén, oxigén felhasználásával készül</p>
+      <span><b>2200</b> Ft</span>
+      <button>Kosárba</button>
+    </li>
+    <li>
+      <div class="image-container">
+        <img src="../../assets/sauce.png" alt="">
+        <ul>
+          <li><img src="../assets/fire-colored.svg" alt=""></li>
+          <li><img src="../assets/fire-monotone.svg" alt=""></li>
+          <li><img src="../assets/fire-monotone.svg" alt=""></li>
+        </ul>
+      </div>
+      <h3>Reaper Szósz</h3>
+      <p>Amely alma, szilva, hidrogén, oxigén felhasználásával készül</p>
+      <span><b>2200</b> Ft</span>
+      <button>Kosárba</button>
+    </li>
   </ul>
 </section>
 <section class="contact-section">
   <h2>Elérhetőségek</h2>
-  <div class="email">
-    <img src="" alt="">
-    <h3></h3>
-  </div>
-  <div class="phone">
-    <img src="" alt="">
-    <h3></h3>
+  <div class="contact-options">
+    <div class="email">
+      <img src="../../assets/email.svg" alt="">
+      <h3>mrchili&#64;gmail.com</h3>
+    </div>
+    <div class="phone">
+      <img src="../../assets/phone.svg" alt="">
+      <h3>+36 20 123 4567</h3>
+    </div>
   </div>
 </section>
 <img class="wave-below" src="../assets/wave.svg" alt="">
-<footer>
-
-</footer>
