--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,12 +11,12 @@
     </ul>
   </nav>
   <a href="">
-    Rendelés
+    <span>Rendelés</span>
   </a>
   <button>
     <img src="../assets/shopping cart.svg" alt="Shopping cart icon">
   </button>
-  <a href="">
+  <a href="https://www.tiktok.com/@_mr.chili_" target="_blank">
     <img src="../assets/tiktok.svg" alt="TikTok icon">
   </a>
   <button (click)="toggleMobileNav()">
