--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,25 +1,30 @@
 <main>
+  <img src="../../assets/Chili Pepper.svg" alt="">
+  <img src="../../assets/Chili Pepper.svg" alt="">
+  <img src="../../assets/sauces.svg" alt="">
+  <img src="../../assets/Plant.svg" alt="">
+  <img src="../../assets/background chili.svg" alt="">
+  <img src="../../assets/background chili.svg" alt="">
   <section class="banner">
     <div class="banner-text">
       <div class="banner-headline">
-        <h1>Mr. Chili</h1>
-        <h2>Csípni fogod</h2>
+        <h1>Mr. CHILI,</h1>
+        <h2>Csípni fogod...</h2>
       </div>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-        Adipisci ex, quam id expedita officia accusantium. 
-        Mollitia asperiores ipsam aperiam quod! 
-        Autem eos aliquid inventore esse, iste blanditiis nesciunt laudantium dolores.
+        Lorem ipsum dolor sit amet consectetur. Est pellentesque fermentum a auctor libero lacus. Diam purus velit et cras ac 
       </p>
       <button>Termékek</button>
     </div>
     <div class="banner-carousel">
-      <button class="chevron-left">
-        <img src="../assets/chevron-left.svg" alt="">
+      <img class="background-img" src="../../assets/blob.svg" alt="">
+      <button class="chevron-left hvr-sleep-to-left">
+        <img src="../../assets/chevron-left.svg" alt="">
       </button>
       <button class="chevron-right">
-        <img src="../assets/chevron-right.svg" alt="">
+        <img src="../../assets/chevron-right.svg" alt="">
       </button>
+      <img class="product-img" src="../../assets/sauce.png" alt="Image of product">
       <ul>
         <li></li>
         <li class="selected">
@@ -27,29 +32,31 @@
         </li>
         <li></li>
       </ul>
+      <h3>Reaper Szósz</h3>
     </div>
   </section>
   <ul>
     <li>
       <div class="circle">
-        <img src="../assets/transport.svg" alt="">
+        <img src="../../assets/transport.svg" alt="">
       </div>
       <h2>Szállítás</h2>
       <p>Ingyenes szállítás <br> 10000 Ft fölött</p>
     </li>
     <li>
       <div class="circle">
-        <img src="../assets/like.svg" alt="">
+        <img src="../../assets/like.svg" alt="">
       </div>
       <h2>Elégedettség</h2>
       <p>100%-os vásárlói <br> elégedettség</p>
     </li>
     <li>
       <div class="circle">
-        <img src="../assets/sale.svg" alt="">
+        <img src="../../assets/sale.svg" alt="">
       </div>
       <h2>Akciók</h2>
       <p>Gyakori akciók <br>és nyereményjátékok</p>
     </li>
   </ul>
 </main>
+<app-below-fold></app-below-fold>
