basic layout (missing mobile mostly)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,54 @@
-<p>about works!</p>
+<main>
+  <section class="images">
+    <img src="../../assets/about img 1.jpg" alt="">
+    <img src="../../assets/about img 2.jpg" alt="">
+    <img src="../../assets/about img 3.jpg" alt="">
+    <img src="../../assets/about img 4.jpg" alt="">
+  </section>
+  <section class="about-info">
+    <h1>Történetünk</h1>
+    <section class="text-section">
+      <div class="text-container">
+        <p>Mr. Chili egy 2024-ben alapult... Lorem ipsum dolor sit amet consectetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur. Amet sed sed est diam. Sapien vitae dolor ut sit pellentesque nunc at velit. Vitae semper nisl nunc ultrices elementum feugiat in magna. </p>
+      </div>
+      <ul>
+        <li>
+          <div></div>
+          2018
+        </li>
+        <li class="selected">
+          <div></div>
+          2020
+        </li>
+        <li>
+          <div></div>
+          2024
+        </li>
+      </ul>
+    </section>
+    <ul>
+      <li>
+        <div class="circle">
+          <img src="../../assets/hungary flag.svg" alt="">
+        </div>
+        <h2>Szállítás</h2>
+        <p>Ingyenes szállítás <br> 10000 Ft fölött</p>
+      </li>
+      <li>
+        <div class="circle">
+          <img src="../../assets/eco.svg" alt="">
+        </div>
+        <h2>Szállítás</h2>
+        <p>Ingyenes szállítás <br> 10000 Ft fölött</p>
+      </li>
+      <li>
+        <div class="circle">
+          <img src="../../assets/care.svg" alt="">
+        </div>
+        <h2>Szállítás</h2>
+        <p>Ingyenes szállítás <br> 10000 Ft fölött</p>
+      </li>
+    </ul>
+  </section>
+</main>
