--- a/src/app/below-fold/below-fold.component.html
+++ b/src/app/below-fold/below-fold.component.html
@@ -60,3 +60,39 @@
   </div>
 </section>
 <img class="wave-below" src="../assets/wave.svg" alt="">
+<section class="customer-reviews">
+  <img src="../../assets/background chili.svg" alt="">
+  <img src="../../assets/background chili.svg" alt="">
+  <ul>
+    <li>
+      <p>“A quote from a customer.”</p>
+      <div class="customer">
+        <img src="../../assets/avatar.png" alt="">
+        <div class="customer-info">
+          <h4>Name</h4>
+          <span>Description</span>
+        </div>
+      </div>
+    </li>
+    <li>
+      <p>“A quote from a customer.”</p>
+      <div class="customer">
+        <img src="../../assets/avatar.png" alt="">
+        <div class="customer-info">
+          <h4>Name</h4>
+          <span>Description</span>
+        </div>
+      </div>
+    </li>
+    <li>
+      <p>“A quote from a customer.”</p>
+      <div class="customer">
+        <img src="../../assets/avatar.png" alt="">
+        <div class="customer-info">
+          <h4>Name</h4>
+          <span>Description</span>
+        </div>
+      </div>
+    </li>
+  </ul>
+</section>
