--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,51 @@
-<p>contact works!</p>
+<main>
+  <ul>
+    <li>
+      <div class="circle">
+        <img src="../../assets/phone mono.svg" alt="">
+      </div>
+      <h2>Telefon</h2>
+      <p>+36 30 610 7515</p>
+    </li>
+    <li>
+      <div class="circle">
+        <img src="../../assets/mail.svg" alt="">
+      </div>
+      <h2>Email</h2>
+      <p>mrchili&#64;gmail.com</p>
+    </li>
+    <li>
+      <div class="circle">
+        <img src="../../assets/location.svg" alt="">
+      </div>
+      <h2>Cím</h2>
+      <p>1234 Budapest</p>
+    </li>
+  </ul>
+  <section class="gyik">
+    <h1>GYIK</h1>
+    <ul>
+      <li>
+        <input type="radio" name="accordion" id="first" checked>
+        <label for="first">Question One</label>
+        <div class="content">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, magnam autem inventore iste adipisci totam aspernatur sit facere tempore deleniti atque est illo eveniet esse nam voluptates dolore soluta corrupti!</p>
+        </div>
+      </li>
+      <li>
+        <input type="radio" name="accordion" id="second">
+        <label for="second">Question Two</label>
+        <div class="content">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, magnam autem inventore iste adipisci totam aspernatur sit facere tempore deleniti atque est illo eveniet esse nam voluptates dolore soluta corrupti!</p>
+        </div>
+      </li>
+      <li>
+        <input type="radio" name="accordion" id="third">
+        <label for="third">Question Three</label>
+        <div class="content">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, magnam autem inventore iste adipisci totam aspernatur sit facere tempore deleniti atque est illo eveniet esse nam voluptates dolore soluta corrupti!</p>
+        </div>
+      </li>
+    </ul>
+  </section>
+</main>
