--- a/src/app/below-fold/below-fold.component.css
+++ b/src/app/below-fold/below-fold.component.css
@@ -96,10 +96,6 @@
   padding: 4% 0;
 }
 
-.image-container ul li:nth-child(1) {
-  padding: 1% 0;
-}
-
 .products-section li {
   font-family: "Bitter";
 }
@@ -174,4 +170,75 @@
 
 .wave-below {
   transform: rotate(180deg) translateY(2rem);
+}
+
+.customer-reviews {
+  height: 40vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100vw;
+  max-width: 100%;
+  overflow-x: clip;
+}
+
+.customer-reviews ul {
+  max-width: 1280px;
+  width: 100%;
+  padding: 0 2.5rem;
+  list-style: none;
+  height: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.customer-reviews ul li {
+  background-color: white;
+  width: 27.5%;
+  height: 100%;
+  border-radius: 0.75rem;
+  box-shadow: -4px 8px 20px rgba(0,0,0, 0.1);
+  padding: 2rem clamp(1rem, 0.332rem + 1.39vw, 2rem);
+  font: clamp(1rem, 0.833rem + 0.348vw, 1.25rem) "Bitter";
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.customer-reviews .customer {
+  display: flex;
+}
+
+.customer img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 1.5rem;
+  margin-right: 1rem;
+  object-fit: contain;
+}
+
+.customer-reviews > img {
+  width: clamp(7.5rem, 4.159rem + 6.95vw, 12.5rem);
+  height: clamp(7.5rem, 4.159rem + 6.95vw, 12.5rem);
+  position: absolute;
+  opacity: 0.3;
+}
+
+.customer-reviews > img:nth-child(1) {
+  left: 2%;
+  transform: rotate(30deg);
+  bottom: 10%;
+}
+
+.customer-reviews > img:nth-child(2) {
+  right: 2%;
+  transform: scaleX(-1) rotate(30deg);
+  top: -40%;
+}
+
+@media only screen and (max-width: 1600px) {
+  .customer-reviews > img {
+    display: none
+  }
 }
