--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -280,3 +280,67 @@ ul p {
   text-align: center;
   font: clamp(1rem, 0.666rem + 0.695vw, 1.5rem) "Bitter";
 }
+
+@media only screen and (max-width: 768px) {
+  main > img {
+    display: none
+  }
+
+  main {
+    height: max-content !important;
+  }
+
+  main .banner {
+    width: 100vw;
+    background-color: transparent;
+    box-shadow: none;
+    flex-direction: column;
+    align-items: center;
+    height: max-content;
+    gap: 3rem;
+    margin-bottom: 64px;
+  }
+
+  .banner .banner-text {
+    padding: 0 ;
+    width: clamp(16.25rem, 6.964rem + 46.429vw, 29.25rem);
+    gap: 1rem;
+  }
+
+  .banner h1 {
+    font-size: clamp(2.625rem, 2.089rem + 2.679vw, 3.375rem);
+  }
+
+  .banner h2 {
+    font-size: clamp(1.75rem, 1.393rem + 1.786vw, 2.25rem);
+  }
+
+  .banner-headline {
+    width: 100%;
+  }
+
+  main > ul {
+    flex-direction: column;
+    height: max-content;
+    gap: 2rem;
+    margin: 2rem 0;
+  }
+
+  .banner-text p {
+    font-size: clamp(1rem, 0.821rem + 0.893vw, 1.25rem);
+  }
+
+  .banner-carousel {
+      width: clamp(15rem, 9.643rem + 26.786vw, 22.5rem);
+  }
+
+  .banner-carousel ul {
+    bottom: 0;
+    transform: translateY(50%)
+  }
+
+  .banner-carousel h3 {
+    right: 0;
+    transform: translateX(30%);
+  }
+}
