--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -34,6 +34,20 @@
         </li>
         <li>Őrlemények</li>
         <li>Paprikák</li>
+        <li (click)="toggleProductTypes()">
+          Típus
+          <svg [style.transform]="showProductTypes ? 'rotate(180deg)' : 'rotate(0)'" width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M6 9L12 15L18 9" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+          <ul class="product-types" (click)="nothing($event)" (mouseleave)="toggleProductTypes()" [style.display]="showProductTypes ? 'block' : 'none'">
+            @for (type of productTypes; track type.id) {
+              <li>
+                <button (click)="selectProductType(type.id, $event)" [style.backgroundImage]="type.isChecked ? 'url(../../assets/checkmark.svg)' : 'none'" [style.backgroundColor]="type.isChecked ? '#2196F3' : '#eee'"></button>
+                {{type.title}}
+              </li>
+            }
+          </ul>
+        </li>
       </ul>
     </section>
     <section class="products-list">
