about layout fixup

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,13 @@
 <main>
   <section class="images">
-    <img src="../../assets/about img 1.jpg" alt="">
-    <img src="../../assets/about img 2.jpg" alt="">
-    <img src="../../assets/about img 3.jpg" alt="">
-    <img src="../../assets/about img 4.jpg" alt="">
+    <div class="img-topside">
+      <div class="img-topleft">
+        <img src="../../assets/about img 9.jpg" alt="">
+        <img src="../../assets/about img 8.jpg" alt="">
+      </div>
+      <img src="../../assets/about img 7.jpg" alt="">
+    </div>
+    <img src="../../assets/about img 5.jpg" alt="">
   </section>
   <section class="about-info">
     <h1>Történetünk</h1>
