--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -10,40 +10,59 @@ main {
 .images {
   width: 30%;
   height: 100%;
-  padding: 64px 0;
-  display: grid;
-  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr;
-  row-gap: 8px;
-  column-gap: 8px;
+  padding: 5% 0;
+}
+
+.images .img-topside, .images > img {
+  width: 100%;
+  height: 50%;
+}
+
+.images .img-topside {
+  display: flex;
+}
+
+.images > img {
+  object-fit: fill;
+}
+
+.img-topside > div {
+  width: 50%;
+  height: 100%;
+}
+
+.img-topside > img {
+  width: 50%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.img-topleft {
+  display: flex;
+  flex-direction: column;
+}
+
+.img-topleft img:first-child {
+  width: 100%;
+  height: 50%;
+  background-color: black;
+  object-fit: contain;
+}
+
+.img-topleft img:last-child {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
 }
 
 .images img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  background-color: black;
-}
-
-.images img:nth-child(1) {
-  grid-row: 1 / 2;
-  grid-column: 1 / 2;
-}
-.images img:nth-child(2) {
-  grid-row: 1 / 3;
-  grid-column: 2 / 3;
-}
-.images img:nth-child(3) {
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
-}
-.images img:nth-child(4) {
-  grid-row: 3 / 5;
-  grid-column: 1 / 3;
+  border: 2px solid white;
 }
 
 .about-info {
   width: 70%;
-  margin: 64px 0;
+  height: calc(90% - 36px);
+  margin: auto 0;
 }
 
 h1 {
@@ -54,12 +73,16 @@ h1 {
 
 .text-container {
   width: 75%;
+  height: 100%;
   box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-  font: 22px 'Bitter';
+  font: clamp(1rem, 0.749rem + 0.521vw, 1.375rem) 'Bitter';
   line-height: 160%;
-  padding: 32px;
+  padding: 24px;
   border-radius: 0 16px 16px 0;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .text-container p:nth-child(2) {
@@ -70,6 +93,7 @@ h1 {
 .text-section {
   display: flex;
   margin-top: 1.5rem;
+  height: 36%;
 }
 
 .text-section ul {
@@ -79,7 +103,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font: 24px 'Bitter';
+  font: clamp(1.125rem, 0.874rem + 0.521vw, 1.5rem) 'Bitter';
   gap: 1rem;
 }
 
@@ -87,20 +111,21 @@ h1 {
   display: flex;
   align-items: center;
   gap: 1rem;
+  cursor: pointer;
 }
 
 .text-section ul div {
-  width: 40px;
-  height: 10px;
+  width: clamp(2rem, 1.666rem + 0.695vw, 2.5rem);
+  height: clamp(0.5rem, 0.333rem + 0.348vw, 0.75rem);
   background-color: #D9D9D9;
 }
 
 .selected {
-  font-size: 36px;
+  font-size: clamp(1.5rem, 0.999rem + 1.043vw, 2.25rem);
 }
 
 .selected div {
-  width: 54px !important;
+  width: clamp(2.5rem, 1.915rem + 1.216vw, 3.375rem) !important;
   background-color: #6AEDFF !important;
 }
 
@@ -115,10 +140,10 @@ h1 {
   list-style: none;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .about-info > ul > li {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
