spice indicator bug

--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -221,6 +221,7 @@ h2 {
   transform: translate(-50%, 50%);
   width: 60%;
   justify-content: space-evenly !important;
+  flex-wrap: nowrap !important;
 }
 
 .spice-level-indicator li {
